--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,34 +1,58 @@
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-# This workflow will build a Java project with Gradle and cache/restore any dependencies to improve the workflow execution time
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-java-with-gradle
+## This workflow uses actions that are not certified by GitHub.
+## They are provided by a third-party and are governed by
+## separate terms of service, privacy policy, and support
+## documentation.
+## This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
+## For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Java CI with Gradle
+name: Gradle Package
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ main]
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches: [ main ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK 11
-      uses: actions/setup-java@v3
-      with:
-        java-version: '11'
-        distribution: 'temurin'
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
-      with:
-        arguments: build
+      - uses: ankane/setup-mariadb@v1
+      - name: Create DB, DB user, grant permission
+        run: |
+              sudo mysql -e "create database if not exists ${{ secrets.DB_NAME}}"
+              sudo mysql -e "create user '${{ secrets.DB_USER_NAME}}'@localhost identified by '${{ secrets.DB_USER_PASSWORD}}'"
+              sudo mysql -e "grant all privileges on ${{ secrets.DB_NAME}}.* to '${{ secrets.DB_USER_NAME}}'@localhost"
+      - name: read repository
+        uses: actions/checkout@v3
+      - name: Set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+          server-id: github # Value of the distributionManagement/repository/id field of the pom.xml
+          settings-path: ${{ github.workspace }} # location for the settings.xml file
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+      - name: Create application-oauth.yml
+        run: |
+              echo -e "${{ secrets.APPLICATION_OAUTH}}" >> ./src/main/resources/application-oauth.yml
+
+      - name: Build with Gradle
+        run: ./gradlew clean build -x test --stacktrace
+#      - name: deploy file
+#        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
+#        with:
+#          username: ${{ secrets.FTP_USERNAME }}
+#          server: ${{ secrets.FTP_HOST }}
+#          port: ${{ secrets.FTP_PORT }}
+#          local_path: './build/libs/*'
+#          remote_path: '/home/j2kb'
+#          sftp_only: true
+#          password: ${{ secrets.FTP_PASSWORD }}
