깃허브 액션 스크립트 그레이들 테스트 결과 출력

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,3 +56,5 @@ jobs:
 #          remote_path: '/home/j2kb'
 #          sftp_only: true
 #          password: ${{ secrets.FTP_PASSWORD }}
+      - name: buildErr
+        run: cat ./build/reports/tests/test/index.html
