깃허브 액션 스크립트 빌드 실패해도 다음스탭 진행하도록 수정

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,7 @@ jobs:
 
       - name: Build with Gradle
         run: ./gradlew clean build  --stacktrace
+        continue-on-error: true
 #      - name: deploy file
 #        uses: wlixcc/SFTP-Deploy-Action@v1.2.4
 #        with:
