--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       matching-strategy: ant_path_matcher
   jpa: #jpa 종류
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         show_sql : true #콘솔에 로그가 나옴
