--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   profiles:
     active: oauth
-    include: dev
+    include: prod
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
