--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,6 +22,11 @@ jobs:
       packages: write
 
     steps:
+      - uses: actions/setup-node@v2
+        with:
+          node-version: 12
+      - uses: actions/checkout@master
+      - uses: pustovitDmytro/redis-github-action@v1.0.1
       - uses: ankane/setup-mariadb@v1
       - name: Create DB, DB user, grant permission
         run: |
