인증 사진 저장 안되는 오류 수정

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -1,3 +1,3 @@
 server:
   port: 8080
-file-save-location: ~/Document/goalKeeperV2/picture
+file-save-location: /Users/imsubin/Documents/goalKeeperV2/picture
