Build(sql) : DB 초기화 하지 않도록 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
       matching-strategy: ant_path_matcher
   jpa: #jpa 종류
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         format_sql: true #이쁘게 해줌
