--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,3 +19,8 @@ logging.level:
   root: info
   org.hibernate.SQL: trace #콘솔에 남기는게 아니라 로그로 남음.
   org.hibernate.type: trace #바인딩된 파라미터까지 볼 수 있
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health, info, prometheus
